simple html change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Check The Weather At The Moment</p>
   </header>
 
-  <div class="container">
+  <main class="container">
     <div class="cover">
       <img id="img" src="assets/city-weather02.jpg" alt="">
     </div>
@@ -33,7 +33,7 @@
         <h1 id="response" style="width: fit-content;"></h1>
       </div>
     </div>
-  </div>
+  </main>
 
   <footer>
     <div class="footer-text"><span>©</span> Copyrights to Redouane Bekkouche 2021</div>
