--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="styles.css">
+  <script src="app.js" defer></script>
   <title>Weather Check</title>
 </head>
 
@@ -28,7 +29,7 @@
       </button>
     </form>
 
-    <div id="response" class="response">sgqsgqsgqsgrg</div>
+    <div id="response" class="response"></div>
   </main>
 
   <footer>
@@ -39,8 +40,6 @@
       <span id="year-holder"></span>
     </div>
   </footer>
-
-  <script src="./app.js"></script>
 </body>
 
 </html>
