--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="assets/weather-icon.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
   <script src="app.js" defer></script>
-  <title>Weather Check</title>
+  <title>Check Weather</title>
 </head>
 
 <body>
@@ -16,13 +17,13 @@
   </header>
 
   <main class="container">
-    <form id="city-form">
+    <form id="city-form" #cityForm>
       <div class="form-group">
         <label for="city-input" id="city-lbl">City Name: </label>
-        <input type="text" id="city-input" name="city" placeholder="Enter a city name here" required>
+        <input type="text" id="city-input" name="city" placeholder="Search city" autofocus required>
       </div>
 
-      <button class="submit-btn" type="submit">
+      <button class="submit-btn" type="submit" id="submit-btn">
         Check Weather
       </button>
 
@@ -31,14 +32,24 @@
       </button>
     </form>
 
-    <div id="response" class="response"></div>
+    <!-- response section -->
+
+    <div id="response" class="response">
+      <div id="success-response">
+        <div id="description"></div>
+        <div id="time" style="margin-top: 15px; font-size: 1rem;"></div>
+      </div>
+
+      <div id="err-msg"></div>
+    </div>
   </main>
 
   <footer>
     <div class="footer-text">
-      <span>©</span>
-      Copyrights to
-      <a class="red1dev-link" href="https://twitter.com/red1dev" target="_blank">Red1Dev</a>
+      Made with <span style="color: red;">♥</span> by
+      <strong>
+        <a class="red1dev-link" href="https://github.com/red1code" target="_blank">Red1Dev</a>
+      </strong>
       <span id="year-holder"></span>
     </div>
   </footer>
